--- a/index.html
+++ b/index.html
@@ -1,30 +1,54 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html><html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой маркетинговый сайт</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Мой маркетинг</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+        }
+        a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+        .telegram-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #0088cc;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <div class="container">
         <h1>Продвижение бизнеса</h1>
         <p>Мы поможем вам увеличить продажи!</p>
-        <a href="#contact" class="button">Связаться</a>
-    </header>
-
-    <section id="services">
+        <a href="#">Связаться</a>
         <h2>Наши услуги</h2>
         <ul>
             <li>SEO-продвижение</li>
             <li>Реклама в соцсетях</li>
             <li>Создание сайтов</li>
         </ul>
-    </section>
-
-    <footer id="contact">
         <h2>Контакты</h2>
         <p>Email: example@email.com</p>
-    </footer>
+        <a class="telegram-button" href="https://t.me/meyrjan_o8">Связаться в Telegram</a>
+    </div>
 </body>
 </html>
