--- a/index.html
+++ b/index.html
@@ -2,53 +2,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой маркетинг</title>
+    <title>Наши Услуги</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: #fff;
+            background-color: #1a1a1a;
+            color: white;
             text-align: center;
             padding: 20px;
         }
         .container {
             max-width: 600px;
             margin: auto;
-            background: rgba(0, 0, 0, 0.7);
+            background: #222;
             padding: 20px;
             border-radius: 10px;
         }
-        a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-        .telegram-button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #0088cc;
-            color: white;
-            text-decoration: none;
+        .service {
+            margin: 10px 0;
+            padding: 15px;
+            background: #333;
             border-radius: 5px;
-            font-size: 18px;
+        }
+        .btn {
+            display: inline-block;
+            background: #ff5722;
+            color: white;
+            padding: 10px 15px;
+            margin-top: 10px;
+            border-radius: 5px;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Продвижение бизнеса</h1>
-        <p>Мы поможем вам увеличить продажи!</p>
-        <a href="#">Связаться</a>
-        <h2>Наши услуги</h2>
-        <ul>
-            <li>SEO-продвижение</li>
-            <li>Реклама в соцсетях</li>
-            <li>Создание сайтов</li>
-        </ul>
-        <h2>Контакты</h2>
-        <p>Email: example@email.com</p>
-        <a class="telegram-button" href="https://t.me/meyrjan_o8">Связаться в Telegram</a>
+        <h1>Наши Услуги</h1>
+        <div class="service">
+            <h3>Продаём сборки / макросы для ПК и КВМ</h3>
+            <p>Цена: 200-500 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <div class="service">
+            <h3>Тактики В Казино</h3>
+            <p>Цена: 300 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <div class="service">
+            <h3>Шаблоны для ОПГ</h3>
+            <p>Цена: 500 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <div class="service">
+            <h3>Шаблоны для Гос. структур</h3>
+            <p>Цена: 500 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <div class="service">
+            <h3>Шаблон для Игрового Помощника</h3>
+            <p>Цена: 350 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <div class="service">
+            <h3>Прохождение обзвона и заполнение форума после лидерки</h3>
+            <p>Цена: 1500 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <div class="service">
+            <h3>Заполнение заявления</h3>
+            <p>Цена: 350 рублей</p>
+            <a href="#" class="btn">Заказать</a>
+        </div>
+        <h3>Свяжитесь с нами в Telegram:</h3>
+        <p><a href="https://t.me/meyrjan_o8" style="color: #ff5722;">@meyrjan_o8</a></p>
     </div>
 </body>
 </html>
