--- a/index.html
+++ b/index.html
@@ -2,79 +2,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Наши Услуги</title>
+    <title>Услуги компании</title>
     <style>
         body {
+            background-color: #000;
+            color: #fff;
             font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
-            color: white;
             text-align: center;
-            padding: 20px;
+            margin: 0;
         }
         .container {
-            max-width: 600px;
-            margin: auto;
-            background: #222;
+            max-width: 800px;
+            margin: 50px auto;
             padding: 20px;
-            border-radius: 10px;
         }
-        .service {
-            margin: 10px 0;
-            padding: 15px;
-            background: #333;
-            border-radius: 5px;
+        .slide {
+            display: none;
         }
-        .btn {
-            display: inline-block;
-            background: #ff5722;
-            color: white;
-            padding: 10px 15px;
-            margin-top: 10px;
-            border-radius: 5px;
-            text-decoration: none;
+        .active {
+            display: block;
+        }
+        .button {
+            background-color: #fff;
+            color: #000;
+            padding: 10px 20px;
+            margin: 10px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Наши Услуги</h1>
-        <div class="service">
-            <h3>Продаём сборки / макросы для ПК и КВМ</h3>
-            <p>Цена: 200-500 рублей</p>
-            <a href="#" class="btn">Заказать</a>
+        <h1>Наши услуги</h1>
+        <div class="slide active" id="slide1">
+            <h2>Обзвоны клиентов</h2>
+            <p>Мы предоставляем профессиональные обзвоны для вашего бизнеса.</p>
         </div>
-        <div class="service">
-            <h3>Тактики В Казино</h3>
-            <p>Цена: 300 рублей</p>
-            <a href="#" class="btn">Заказать</a>
+        <div class="slide" id="slide2">
+            <h2>Разработка сайтов</h2>
+            <p>Создаём современные и продающие сайты под ключ.</p>
         </div>
-        <div class="service">
-            <h3>Шаблоны для ОПГ</h3>
-            <p>Цена: 500 рублей</p>
-            <a href="#" class="btn">Заказать</a>
+        <div class="slide" id="slide3">
+            <h2>Реклама и продвижение</h2>
+            <p>Поможем вашему бизнесу привлекать клиентов с помощью рекламы.</p>
         </div>
-        <div class="service">
-            <h3>Шаблоны для Гос. структур</h3>
-            <p>Цена: 500 рублей</p>
-            <a href="#" class="btn">Заказать</a>
-        </div>
-        <div class="service">
-            <h3>Шаблон для Игрового Помощника</h3>
-            <p>Цена: 350 рублей</p>
-            <a href="#" class="btn">Заказать</a>
-        </div>
-        <div class="service">
-            <h3>Прохождение обзвона и заполнение форума после лидерки</h3>
-            <p>Цена: 1500 рублей</p>
-            <a href="#" class="btn">Заказать</a>
-        </div>
-        <div class="service">
-            <h3>Заполнение заявления</h3>
-            <p>Цена: 350 рублей</p>
-            <a href="#" class="btn">Заказать</a>
-        </div>
-        <h3>Свяжитесь с нами в Telegram:</h3>
-        <p><a href="https://t.me/meyrjan_o8" style="color: #ff5722;">@meyrjan_o8</a></p>
+        <button class="button" onclick="prevSlide()">Назад</button>
+        <button class="button" onclick="nextSlide()">Вперёд</button>
+        <br>
+        <a href="https://t.me/katerina_majik" class="button">Заказать услугу</a>
     </div>
+    <script>
+        let currentSlide = 1;
+        function showSlide(n) {
+            let slides = document.querySelectorAll(".slide");
+            slides.forEach(slide => slide.classList.remove("active"));
+            slides[n - 1].classList.add("active");
+        }
+        function nextSlide() {
+            currentSlide = (currentSlide % 3) + 1;
+            showSlide(currentSlide);
+        }
+        function prevSlide() {
+            currentSlide = (currentSlide - 2 + 3) % 3 + 1;
+            showSlide(currentSlide);
+        }
+    </script>
 </body>
 </html>
