--- a/index.html
+++ b/index.html
@@ -2,40 +2,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Наши Услуги</title>
+    <title>Биография - Meyrjan08</title>
     <style>
         body {
-            background-color: #000;
-            color: #fff;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #141e30, #243b55);
+            color: white;
             text-align: center;
-            padding: 20px;
         }
         .container {
             max-width: 800px;
-            margin: auto;
-        }
-        .service {
+            margin: 50px auto;
             padding: 20px;
-            border-bottom: 1px solid #444;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
-        .contact {
-            margin-top: 30px;
-            font-size: 20px;
+        img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 4px solid white;
+        }
+        h1 {
+            margin-top: 10px;
+        }
+        p {
+            font-size: 18px;
+        }
+        .links a {
+            display: block;
+            margin: 10px auto;
+            padding: 10px;
+            width: 80%;
+            max-width: 300px;
+            background: white;
+            color: #141e30;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .links a:hover {
+            background: #f0f0f0;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Наши Услуги</h1>
-        <div class="service">Прохождение обзвона на Лидеров / Заместителя</div>
-        <div class="service">Продажа виртуальных денег</div>
-        <div class="service">Продажа Макросы для ПК/КВМ</div>
-        <div class="service">Продажа улучшений для ОПГ/Госс</div>
-        <div class="service">Заполнение заявки для Старшего Состава</div>
-        <div class="service">Продажа рангов</div>
-        <div class="service">Покупка военного билета</div>
-        <div class="contact">Связь со мной: <a href="https://t.me/meyrjan_o8" style="color: #0af;">@meyrjan_o8</a></div>
+        <img src="profile.jpg" alt="Фото Meyrjan08">
+        <h1>Meyrjan08</h1>
+        <p>Привет! Меня зовут Meyrjan08, и это мой персональный сайт с информацией обо мне.</p>
+        <div class="links">
+            <a href="https://t.me/meyrjan_o8" target="_blank">Telegram</a>
+            <a href="https://www.instagram.com/meyrjan_o8" target="_blank">Instagram</a>
+            <a href="https://t.me/itachi_sexuuaall" target="_blank">Telegram-канал</a>
+        </div>
     </div>
 </body>
 </html>
