--- a/index.html
+++ b/index.html
@@ -1,64 +1,22 @@
-<!DOCTYPE html><html lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Биография - Meyrjan08</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to right, #141e30, #243b55);
-            color: white;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-        img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 4px solid white;
-        }
-        h1 {
-            margin-top: 10px;
-        }
-        p {
-            font-size: 18px;
-        }
-        .links a {
-            display: block;
-            margin: 10px auto;
-            padding: 10px;
-            width: 80%;
-            max-width: 300px;
-            background: white;
-            color: #141e30;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        .links a:hover {
-            background: #f0f0f0;
-        }
-    </style>
+    <title>Биография Мейржана</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <img src="profile.jpg" alt="Фото Meyrjan08">
-        <h1>Meyrjan08</h1>
-        <p>Привет! Меня зовут Meyrjan08, и это мой персональный сайт с информацией обо мне.</p>
-        <div class="links">
-            <a href="https://t.me/meyrjan_o8" target="_blank">Telegram</a>
-            <a href="https://www.instagram.com/meyrjan_o8" target="_blank">Instagram</a>
-            <a href="https://t.me/itachi_sexuuaall" target="_blank">Telegram-канал</a>
+        <div class="profile">
+            <img src="profile.jpg" alt="Фото Азиза" class="profile-img">
+            <h1>Мейржан Сайткариев</h1>
+            <p>Программист и разработчик сайтов</p>
+            <div class="social-links">
+                <a href="https://t.me/meyrjan_o8" target="_blank">Telegram</a>
+                <a href="https://instagram.com/meyrjan_o8" target="_blank">Instagram</a>
+                <a href="https://t.me/itachi_sexuuaall" target="_blank">Telegram-канал</a>
+            </div>
         </div>
     </div>
 </body>
