--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="profile">
             <img src="profile.jpg" alt="Фото Азиза" class="profile-img">
-            <h1>Мейржан Сайткариев</h1>
+            <h1>Мейржан Сeйткаримов</h1>
             <p>Программист и разработчик сайтов</p>
             <div class="social-links">
                 <a href="https://t.me/meyrjan_o8" target="_blank">Telegram</a>
