--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Биография Мейржана</title>
+    <title>Мейржан - Биография</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="profile">
-            <img src="profile.jpg" alt="Фото Азиза" class="profile-img">
-            <h1>Мейржан Сeйткаримов</h1>
-            <p>Программист и разработчик сайтов</p>
-            <div class="social-links">
-                <a href="https://t.me/meyrjan_o8" target="_blank">Telegram</a>
-                <a href="https://instagram.com/meyrjan_o8" target="_blank">Instagram</a>
-                <a href="https://t.me/itachi_sexuuaall" target="_blank">Telegram-канал</a>
-            </div>
-        </div>
-    </div>
+    <header>
+        <h1>Мейржан</h1>
+        <p>17 лет, родился в Ташкенте. Учусь в школе.</p>
+    </header>
+
+    <section class="bio">
+        <h2>Обо мне</h2>
+        <p>Здесь можно добавить текст о себе.</p>
+    </section>
+
+    <section class="social">
+        <h2>Мои соцсети</h2>
+        <a href="https://t.me/meyrjan_o8" class="btn">Telegram</a>
+        <a href="https://t.me/itachi_sexuuaall" class="btn">Telegram-канал</a>
+        <a href="https://www.instagram.com/meyrjan_o8" class="btn">Instagram</a>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
