--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html><html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,21 +8,20 @@
 <body>
     <header>
         <h1>Мейржан</h1>
-        <p>17 лет, родился в Ташкенте. Учусь в школе.</p>
-    </header>
+        <p>Молодой разработчик и креативный человек</p>
+    </header><section class="bio">
+    <h2>Обо мне</h2>
+    <p>Меня зовут Мейржан, мне 17 лет, и я родился в Ташкенте. В данный момент учусь в школе и увлекаюсь созданием сайтов, программированием и современными технологиями. Мне нравится развиваться в сфере IT и работать над новыми интересными проектами.</p>
+</section>
 
-    <section class="bio">
-        <h2>Обо мне</h2>
-        <p>Здесь можно добавить текст о себе.</p>
-    </section>
+<section class="social">
+    <h2>Мои соцсети</h2>
+    <a href="https://t.me/meyrjan_o8" class="btn">Telegram</a>
+    <a href="https://t.me/itachi_sexuuaall" class="btn">Telegram-канал</a>
+    <a href="https://www.instagram.com/meyrjan_o8" class="btn">Instagram</a>
+</section>
 
-    <section class="social">
-        <h2>Мои соцсети</h2>
-        <a href="https://t.me/meyrjan_o8" class="btn">Telegram</a>
-        <a href="https://t.me/itachi_sexuuaall" class="btn">Telegram-канал</a>
-        <a href="https://www.instagram.com/meyrjan_o8" class="btn">Instagram</a>
-    </section>
+<script src="script.js"></script>
 
-    <script src="script.js"></script>
 </body>
 </html>
